test/zinc_source/compile_errors/operators/05_string_bitwise.zn
// expected-error: operator '&' requires integer operands

fn main() {
    bad = "hello" & 1
}
